# c-base-oauth2

./: .gitignore  LICENSE  README.md  c-base-oauth2.service  manage.py  pyproject.toml  pytest.ini  run_gunicorn.sh  wsgi.py
c_base_oauth2/: apps.pth  asgi.py  oauth_validators.py  settings.py  urls.py
c_base_oauth2/apps/c_base_auth/: apps.py  models.py
c_base_oauth2/apps/c_base_auth/tests/: test_models.py
c_base_oauth2/apps/users/: admin.py  apps.py  forms.py  models.py  views.py
c_base_oauth2/apps/users/migrations/: 0001_initial.py  0002_user_uid.py
c_base_oauth2/apps/users/tests/: test_models.py
c_base_oauth2/conf/: __init__.py  base.py  dev.py  prod.py  test.py
c_base_oauth2/conf/common/: logs.py
c_base_oauth2/templates/: base.html  user_profile.html
c_base_oauth2/templates/registration/: logged_out.html  login.html
c_base_oauth2/templates/users/: alien_login.html
c_base_oauth2/tests/: test_urls.py
