[project]
name = "c-base-oauth2"
version = "1.0.0"
description = "A OAuth2 service to authenticate c-base members and allow them access to c-base-owned services"
authors = ["Uwe Kamper <uk@c-base.org>"]
requires-python = ">=3.10"

dependencies = [
    "Django>=5.2.1",
    "django-oauth-toolkit>=3.2.0",
    "psycopg2-binary",
    "django-environ",
    "django-cors-headers>=4.9.0",
    "django-auth-ldap",
    "gunicorn>=25.0.3",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "pytest>=6.1.2",
    "pytest-django>=4.1.0",
    "flake8>=3.8.4",
    "django-debug-toolbar>=3.1.1",
]

